# ailly

./: README.md  example.ipynb  makefile  pyproject.toml
dag/: __init__.py  dag.py
dag/tests/: tests.py
