[tool.poetry]
name = "ailly"
version = "0.1.0"
description = ""
authors = ["Pierre Valentin <me@pierrevalentin.org>"]

[tool.poetry.dependencies]
python = "^3.9"
networkx = "^2.8.4"
h5py = "^3.7.0"
numpy = "^1.22.4"
matplotlib = "^3.5.2"
pygraphviz = "^1.9"

[tool.poetry.dev-dependencies]
pdbpp = "^0.10.3"
autopep8 = "^1.6.0"
notebook = "^6.4.12"
pytest = "^7.1.2"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
